org.mmisw.ontmd: MMI Portal
Carlos Rueda  -  http://marinemetadata.org
$Id$

2009-11-10   1.6.2.alpha3
	Issue 209: list of ontologies ordered by time of registration; most recent first
	- Done, see OntologyTable: sortColumn, sortFactor.
	
	Issue 208: "return to ontology browser" instead of "close"
	- Done. Added MyDialog.setCloseButtonText(String text) and called in appropriate places. 
	
	Issue 211: Remove unnecesary registration confirmation dialogs
	- Done in RegisterNewExecute and RegisterVersionExecute
	
	Other:
		- the "details" button (that shows the initial evaluation of the metadata of an uloaded file)
		is now *only* included if the user is an administrator or the code is running not as Script.	
	
	
2009-11-10   1.6.2.alpha2
	Issue #214: "Direct registration of ontology"
	- see iserver: using new service IServer.registerOntologyDirectly.
	  This now dispatches a "graphId" parameter intended to indicate the desired model
	  graph at the "Ont" service back-end. At time of writing such service is not yet implemented
	  in the "Ont" module.
	  

2009-11-09   1.6.2.alpha
	Issue #214: "Direct registration of ontology" 
	- First version implemented
	- this version only processes hosting type "re-hosted"
	
	- updated UploadServlet to allow extension
	- new server/DirectRegistrationServlet extends UploadServlet
	- new public/direg.html -- form for demonstrating the functionality
	- updated Main.gwt.xml, web.xml
	
	DirectRegistrationServlet extends UploadServlet to inherit the basic upload
	functionality. Overwrites processItems to process the rest of the registration process.
	
	Information for the client:
	--------------------------	
	The fields in the POST request must indicate:
		- username/password: MMI ORR user submitting the ontology
		- ontologyUri:  URI associated with the submitted ontology
		- file:  the selected file in the local system
	
	Note:
		1) the client should indicate the ontology URI (ie., this is not