@@ -3,6 +3,10 @@ Carlos Rueda  -  http://marinemetadata.org
 $Id$
 
 2009-11-10   1.6.2.alpha3
+
+	Issue 207: Remember me on this computer
+	- Implemented.  See LoginPanel, new CookieMan and references.
+	 
 	Issue 209: list of ontologies ordered by time of registration; most recent first
 	- Done, see OntologyTable: sortColumn, sortFactor.
 	
